# marshmallow

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  disassemble.sh  logserver.js
cmake/: Helpers.cmake  linker.ld  toolchain.cmake
libs/exlaunch/: CMakeLists.txt
libs/exlaunch/exl/: alloc.hpp  armv8.hpp  common.hpp  lib.hpp  module.cpp  result.hpp  setting.hpp  types.h
libs/exlaunch/exl/armv8/: register.hpp
libs/exlaunch/exl/armv8/instructions/: base.hpp
libs/exlaunch/exl/armv8/instructions/op100x/: base.hpp
libs/exlaunch/exl/armv8/instructions/op100x/add_subtract_immediate/: base.hpp
libs/exlaunch/exl/armv8/instructions/op100x/logical_immediate/: base.hpp
libs/exlaunch/exl/armv8/instructions/op100x/move_wide_immediate/: base.hpp
libs/exlaunch/exl/armv8/instructions/op100x/pc_rel_addressing/: base.hpp
libs/exlaunch/exl/armv8/instructions/op101x/: base.hpp
libs/exlaunch/exl/armv8/instructions/op101x/hints/: base.hpp
libs/exlaunch/exl/armv8/instructions/op101x/unconditional_branch_immediate/: base.hpp
libs/exlaunch/exl/armv8/instructions/op101x/unconditional_branch_register/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx101/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx101/logical_shifted_register/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx1x0/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx1x0/load_register_literal/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx1x0/load_store_register_offset/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx1x0/load_store_register_unscaled_immediate/: base.hpp
libs/exlaunch/exl/armv8/instructions/opx1x0/load_store_register_unsigned_immediate/: base.hpp
libs/exlaunch/exl/diag/: abort.cpp  abort.hpp  assert.hpp
libs/exlaunch/exl/hook/: base.hpp  inline.hpp  replace.hpp  trampoline.hpp
libs/exlaunch/exl/hook/nx64/: hook_impl.cpp  impl.hpp  inline_impl.cpp
libs/exlaunch/exl/nx/: nx.h  types.h
libs/exlaunch/exl/nx/arm/: tls.h
libs/exlaunch/exl/nx/kernel/: svc.h  virtmem.c  virtmem.h
libs/exlaunch/exl/patch/: code_patcher.hpp  patcher_impl.hpp  random_access_patcher.hpp  stream_patcher.hpp
libs/exlaunch/exl/reloc/: elf.cpp  elf.h  elf.hpp  ro.h  rtld.hpp
libs/exlaunch/exl/reloc/rtld/: ModuleObject.cpp  ModuleObject.hpp  ld.cpp  utils.hpp
libs/exlaunch/exl/util/: func_ptrs.hpp  modules.hpp  ptr_path.hpp  random.hpp  typed_storage.hpp
libs/exlaunch/exl/util/math/: bitset.hpp
libs/exlaunch/exl/util/sys/: cur_proc_handle.hpp  jit.hpp  mem_layout.cpp  mem_layout.hpp  rw_pages.cpp  rw_pages.hpp
libs/marshmallow/: CMakeLists.txt
libs/marshmallow/mallow/: alloc.hpp  config.cpp  config.hpp  debug.hpp  mallow.hpp
libs/marshmallow/mallow/exception/: abort.cpp  handler.cpp  handler.hpp  handler.s
libs/marshmallow/mallow/hook/: helpers.hpp
libs/marshmallow/mallow/init/: crt0.s  init.cpp  initArgs.hpp
libs/marshmallow/mallow/logging/: debug.hpp  logSinks.cpp  logSinks.hpp  logger.cpp  logger.hpp
libs/marshmallow/mallow/net/: socket.cpp  socket.hpp
libs/nnsdk/: CMakeLists.txt
libs/nnsdk/user/nn/: socket.hpp
tools/: npdmtool
user/: CMakeLists.txt  subsdk9.json
user/src/: main.cpp  mallowConfig.cpp
